[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/font/open_dyslexic_regular_28.tres" type="DynamicFont" id=1]
[ext_resource path="res://src/DialogueBox.gd" type="Script" id=2]


[node name="DialogueBox" type="Control"]
anchor_top = 0.701
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 238.0
margin_top = 0.280029
margin_right = -238.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
dialogue_file_path = "res://assets/dialogue/dialogue_en.json"

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.184314, 0.156863, 0.156863, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogueText" type="RichTextLabel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 15.0
margin_right = -15.0
margin_bottom = -15.0
custom_fonts/normal_font = ExtResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]Pense num diálogo bom, é esse aqui![center]"
text = "Pense num diálogo bom, é esse aqui!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InteractText" type="RichTextLabel" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -63.0
margin_top = -58.0001
margin_bottom = -6.10352e-05
custom_fonts/normal_font = ExtResource( 1 )
bbcode_enabled = true
bbcode_text = "E"
text = "E"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShowDialogueTween" type="Tween" parent="."]
[connection signal="tween_all_completed" from="ShowDialogueTween" to="." method="_on_ShowDialogueTween_tween_all_completed"]
